--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
     "chroma-js": "^2.1.2",
+    "clsx": "^1.1.1",
+    "copy-to-clipboard": "^3.3.1",
     "nanoid": "^3.1.23",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
