--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lantana",
   "version": "0.1.0",
-  "private": true,
+  "homepage": "https://dumaevrinat.github.io/lantana",
   "dependencies": {
     "@craco/craco": "^6.1.2",
     "@testing-library/jest-dom": "^5.14.1",
@@ -25,7 +25,9 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -47,8 +49,8 @@
   },
   "devDependencies": {
     "@types/chroma-js": "^2.1.3",
-    "@types/react-router-dom": "^5.1.8",
     "autoprefixer": "^9.8.6",
+    "gh-pages": "^3.2.3",
     "postcss": "^7.0.36",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.4"
   }
