--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "recoil": "^0.4.1",
     "typescript": "^4.3.4",
     "web-vitals": "^1.1.2"
   },
