--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "recoil": "^0.4.1",
+    "recoil-persist": "^3.0.0",
     "typescript": "^4.3.4",
     "web-vitals": "^1.1.2"
   },
